Issue 101710 - implementation of Ant Extensibility API : separation of JAX-WS support from J2SE Project